src/compilador/test_semanticaErrores/badTypeAssig2.ctds
class badTypeAssig2{
	
int main(){
	boolean bool;
	int a;
	a=10;
	bool=true;
	a+=bool; //error

	return 1;
}

}